LU-3915 obdclass: revert 5049

revert 5049 to see whether LU-3915 still
exists.

Change-Id: I3846e819b89dccd4019211fdc87cf0bc4881213e
Test-Parameters: fortestonly clientdistro=fc18 testlist=conf-sanity
Signed-off-by: Wei Liu <wei3.liu@intel.com>